Upcoming:
- Made the dialer more performant by also putting the access information in the teleportation data so that we don't need to get the matter receiver(s)
- Fixed inter-dimensional teleportation

1.18-4.0.2:
- Updates for McJtyLib and fixes
- Screens render correctly now

1.18-4.0.1:
- Small fix for recipe manager
- Fixed a bug in the redstone information module
- Fixed the tablet

1.18-4.0.0:
- First release in 1.18

1.16-3.1.7:
- Fixed crash when linking the charged porter on a server
- Fixed a bug where the environmental controller only started working as soon as something like the radius is changed

1.16-3.1.6:
- Big fixes on the crafter. It works much cleaner now, will actually remember recipes and works properly with JEI (instead of only now and then)
- The matter transmitter and receiver private modes now work correctly even if the receiver and/or transmitter is in another dimension

1.16-3.1.5:
- Added a new 'cleanupreceivers' command that you can use to clean up receivers that no longer exist. This can be used after removing a dimension to get rid of the destination in the dialer

1.16-3.1.4:
- Updated to latest version of McJtyLib
- Fixed a few bugs in the matter booster en destination analyzer
- Made the timer and sequencer integer inputs less annoying to edit
- The tablet also works on the creative screen now
- Added TOP support for spawner
- Fixed tooltips for matter receiver and transmitter

1.16-3.1.3:
- Fixed the peaceful module in the environmental controller

1.16-3.1.2:
- Fixed the sensor and environmental controller to consider more mobs as passive (like villagers)

1.16-3.1.1:
- Fixed a crash with the environmental controller which could cause crashes for non living entities (i.e. arrows or items)
- Fixed the 'noteleport' module in the environmental controller. It wouldn't actually do anything. Now it prevents enderman and shulkers as well as enderpearls

1.16-3.1.0:
- Ported the environmental controller (WIP)

1.16-3.0.26: